--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,13 @@
 <body>
   <p>Welcome to the chat app</p>
 
-  <ol id="messages">
-    
-  </ol>
+  <ol id="messages"></ol>
 
   <form id="message-form">
     <input type="text" name="message" placeholder="Type your message here">
     <button>Send</button>
   </form>
+  <button id="send-location">Send Location</button>
 
   <script src = "/socket.io/socket.io.js"></script>
   <script src="/js/libs/jquery-3.2.1.min.js"></script>
